install(
    FILES sample_flow_sync.grc
          sample_replay_from_file_with_repeat.grc
          test_advsink.grc
          test_stateAnd.grc
          test_stateOr.grc
          test_statetimer.grc
          test_statetobool.grc
          test_timeofday.grc
    DESTINATION share/gnuradio/examples/filerepeater)
